{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 17,
  "lineage": "14cc3f70-ec95-f5a6-da3b-726ebf38e383",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3d6710a3-b11c-45ef-a44b-8493afd45243/resourceGroups/Sirine_Amari/providers/Microsoft.Network/networkInterfaces/2mpssr-ds-nic",
            "ip_configuration": [
              {
                "name": "2mpssr-ds-nic-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3d6710a3-b11c-45ef-a44b-8493afd45243/resourceGroups/Sirine_Amari/providers/Microsoft.Network/virtualNetworks/test/subnets/test"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-39-F0-8D",
            "name": "2mpssr-ds-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Sirine_Amari"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_subnet.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3d6710a3-b11c-45ef-a44b-8493afd45243/resourceGroups/Sirine_Amari/providers/Microsoft.Network/networkSecurityGroups/2mpssr-ds-security-group",
            "location": "westeurope",
            "name": "2mpssr-ds-security-group",
            "resource_group_name": "Sirine_Amari",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "2mpssr-ds-security-rule",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3d6710a3-b11c-45ef-a44b-8493afd45243/resourceGroups/Sirine_Amari/providers/Microsoft.Network/networkSecurityGroups/2mpssr-ds-security-group/securityRules/2mpssr-ds-security-rule",
            "name": "2mpssr-ds-security-rule",
            "network_security_group_name": "2mpssr-ds-security-group",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "Sirine_Amari",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3d6710a3-b11c-45ef-a44b-8493afd45243/resourceGroups/Sirine_Amari/providers/Microsoft.Network/virtualNetworks/test/subnets/test",
            "name": "test",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Sirine_Amari",
            "virtual_network_name": "test"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9f7f12d6-5c4a-42c3-a246-33a34e997976",
            "id": "/subscriptions/3d6710a3-b11c-45ef-a44b-8493afd45243/resourceGroups/Sirine_Amari/providers/Microsoft.Network/virtualNetworks/test",
            "location": "westeurope",
            "name": "test",
            "resource_group_name": "Sirine_Amari",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/3d6710a3-b11c-45ef-a44b-8493afd45243/resourceGroups/Sirine_Amari/providers/Microsoft.Network/virtualNetworks/test/subnets/test",
                "name": "test"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    }
  ]
}